# libeddsa

./: CMakeLists.txt  README  README.md
lib/: CMakeLists.txt  bitness.h  burn.c  burn.h  burnstack.c  burnstack.h  compat.h  dh.c  ed.c  ed.h  ed25519-sha512.c  ed_lookup32.h  ed_lookup64.h  eddsa.c  eddsa.h  fld.c  fld.h  fld32.c  fld64.c  limb.h  riddler.h  sc.c  sc.h  sha256.c  sha256.h  sha512.c  sha512.h  x25519.c
test/: CMakeLists.txt  convert-selftest.c  dh-selftest.c  dh-table.h  eddsa-selftest.c  selftest-ed25519.c  selftest-sha512.c  selftest-x25519.c  selftest-x25519_base.c  sha256-selftest.c  sha256-table.h  sha512-selftest.c
